# ml_pipelines

1.ml_automation/: .gitignore  data_creation.py  data_preprocessing.py  model_preparation.py  model_testing.py  pipeline.sh  readme.md  requirements.txt
1.ml_automation/pred/: lr_model.sav  y_pred.csv
1.ml_automation/test/: x_test.csv  y_test.csv
1.ml_automation/train/: x_train.csv  y_train.csv
2.aml_iris/: create_data.py  data_preprocessing.py  model_preparation.py  model_testing.py  pipeline.sh  pyproject.toml  readme.md
